--- a/BarberShop/Views/Shared/_Layout.cshtml
+++ b/BarberShop/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header class="header">
-        @if (User.Identity.IsAuthenticated)
+        @if (User.Identity.IsAuthenticated && User.IsInRole("Cliente"))
         {
             var barbeariaUrl = ViewData["BarbeariaUrl"] as string ?? "";
             <h1 class="h4 text-white">BarberShop</h1>
