--- a/BarberShop/Views/Shared/_AdminLayout.cshtml
+++ b/BarberShop/Views/Shared/_AdminLayout.cshtml
@@ -99,11 +99,11 @@
                             <i class="fas fa-cut mr-2"></i> Meus Serviços
                         </a>
                         <hr class="sidebar-divider">
-                        <a href="@Url.Action("MinhasDatas", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                        <a href="@Url.Action("MeusHorarios", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
                             <i class="fas fa-clock mr-2"></i> Minhas Datas
                         </a>
                         <hr class="sidebar-divider">
-                        <a href="@Url.Action("MeusDados", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                        <a href="@Url.Action("MeusDadosBarbeiro", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
                             <i class="fas fa-user mr-2"></i> Meus Dados
                         </a>
                         <hr class="sidebar-divider">
@@ -147,6 +147,10 @@
     <!-- Scripts adicionais -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.2.0/exceljs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+
+
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <script>
