--- a/BarberShop/wwwroot/css/site.css
+++ b/BarberShop/wwwroot/css/site.css
@@ -76,13 +76,20 @@ body {
             box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.5); /* Sombra interna */
         }
 
-        /* Indicador para o item selecionado (opcional) */
         .profile-menu-dropdown .dropdown-item.active {
-            background-color: #c0392b;
+            background: linear-gradient(90deg, #e74c3c, #c0392b);
             color: #ffffff;
             font-weight: bold;
-            border-left: 4px solid #ffffff; /* Indicador visual */
+            border-left: 4px solid #ffffff;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
+            transition: all 0.3s ease;
         }
+
+        .profile-menu-dropdown .dropdown-item:hover {
+            background: linear-gradient(90deg, #c0392b, #e74c3c);
+            transform: scale(1.02);
+        }
+
 
         /* Ícones */
         .profile-menu-dropdown .dropdown-item i {
@@ -95,6 +102,8 @@ body {
         .profile-menu-dropdown .dropdown-item:hover i {
             color: #ffffff;
         }
+
+
 
 /* Botões do menu */
 .menu-button {
