Ajustes progress bar

--- a/BarberShop/Views/Agendamento/ResumoAgendamento.cshtml
+++ b/BarberShop/Views/Agendamento/ResumoAgendamento.cshtml
@@ -3,8 +3,46 @@
 
 @{
     ViewData["Title"] = "Resumo do Agendamento";
+    int currentStep = (int)(ViewData["CurrentStep"] ?? 3); // Garante que o valor padrão seja 1
+
 }
 <div class="body-with-header">
+    <input type="hidden" id="currentStep" value="@currentStep">
+
+
+    <div class="progress-bar-wrapper">
+        <div id="progressBarContainer">
+            <div class="progress-container">
+                <div class="step" data-step="1">
+                    <div class="progress-icon">
+                        <i class="fas fa-cut"></i>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress-bar-fill"></div>
+                    </div>
+                    <div class="label">Selecionar Serviço</div>
+                </div>
+                <div class="step" data-step="2">
+                    <div class="progress-icon">
+                        <i class="fas fa-user-clock"></i>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress-bar-fill"></div>
+                    </div>
+                    <div class="label">Escolher Barbeiro</div>
+                </div>
+                <div class="step" data-step="3">
+                    <div class="progress-icon">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress-bar-fill"></div>
+                    </div>
+                    <div class="label">Resumo</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container mt-5" id="resumoAgendamentoPage"
          data-barbeiro-id="@Model.BarbeiroId"
