--- a/BarberShop/Views/Barbeiro/EscolherBarbeiro.cshtml
+++ b/BarberShop/Views/Barbeiro/EscolherBarbeiro.cshtml
@@ -4,12 +4,49 @@
     ViewData["Title"] = "Escolher Barbeiro";
     var barbeirosDisponiveis = Model.Where(b => !b.ServicosNaoRealizados.Any());
     var barbeirosIndisponiveis = Model.Where(b => b.ServicosNaoRealizados.Any());
+    int currentStep = (int)(ViewData["CurrentStep"] ?? 2); // Garante que o valor padrão seja 1
+
 }
 <div class="body-with-header">
+    <input type="hidden" id="currentStep" value="@currentStep">
 
     <!-- Inputs Hidden para armazenar barbeariaUrl e barbeariaId -->
     <input type="hidden" id="barbeariaUrl" value="@ViewData["BarbeariaUrl"]" />
     <input type="hidden" id="barbeariaId" value="@ViewData["BarbeariaId"]" />
+
+    <div class="progress-bar-wrapper">
+        <div id="progressBarContainer">
+            <div class="progress-container">
+                <div class="step" data-step="1">
+                    <div class="progress-icon">
+                        <i class="fas fa-cut"></i>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress-bar-fill"></div>
+                    </div>
+                    <div class="label">Selecionar Serviço</div>
+                </div>
+                <div class="step" data-step="2">
+                    <div class="progress-icon">
+                        <i class="fas fa-user-clock"></i>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress-bar-fill"></div>
+                    </div>
+                    <div class="label">Escolher Barbeiro</div>
+                </div>
+                <div class="step" data-step="3">
+                    <div class="progress-icon">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress-bar-fill"></div>
+                    </div>
+                    <div class="label">Resumo</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div id="escolherBarbeiroPage" class="container mt-5"
          data-servico-ids="@ViewData["ServicoIds"]"
