Ajustes html e visual do projeto

--- a/BarberShop/Views/Admin/AvaliacoesBarbearia.cshtml
+++ b/BarberShop/Views/Admin/AvaliacoesBarbearia.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
-    ViewData["Title"] = "Avaliações da Barbearia - Barber Shop";
+    ViewData["Title"] = "Avaliações da Barbearia";
     var barbeiros = ViewBag.Barbeiros as IEnumerable<BarberShop.Application.DTOs.BarbeiroDto>;
 }
 
