--- a/BarberShop/Views/Avaliacao/AvaliacaoExistente.cshtml
+++ b/BarberShop/Views/Avaliacao/AvaliacaoExistente.cshtml
@@ -1,5 +1,8 @@
 ﻿@model BarberShop.Domain.Entities.Avaliacao
+@{
+    ViewData["Title"] = "Avaliação";
 
+}
 <div id="avaliacaoExistentePage" class="avaliacao-container">
     <h2>Avaliação do Atendimento</h2>
 
