--- a/BarberShop/Views/Barbeiro/Index.cshtml
+++ b/BarberShop/Views/Barbeiro/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<BarberShop.Domain.Entities.Barbeiro>
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "Barbeiros";
+
 }
 
 <div id="barbeiroPage" class="container mt-5">
