--- a/BarberShop/Views/Feriado/Index.cshtml
+++ b/BarberShop/Views/Feriado/Index.cshtml
@@ -2,6 +2,8 @@
     @model IEnumerable<FeriadoDTO>
     @{
         Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "Feriados - Barber Shop";
+
     }
 
     <div id="feriadoPage" class="container mt-5">
