--- a/BarberShop/Views/Servico/Index.cshtml
+++ b/BarberShop/Views/Servico/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<BarberShop.Domain.Entities.Servico>
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "Serviços";
+
 }
 
 <div id="servicoPage" class="container-fluid">
