--- a/BarberShop/Views/Admin/Index.cshtml
+++ b/BarberShop/Views/Admin/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "Ambiente Administrativo";
+
 }
 
 <div id="adminDashboard" class="container-fluid p-4">
