--- a/BarberShop/Views/IndisponibilidadeBarbeiro/Index.cshtml
+++ b/BarberShop/Views/IndisponibilidadeBarbeiro/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<BarberShop.Domain.Entities.IndisponibilidadeBarbeiro>
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "Indisponibilidade";
+
 }
 
 <div id="indisponibilidadePage" class="container mt-5">
