--- a/BarberShop/Views/Pagamento/Index.cshtml
+++ b/BarberShop/Views/Pagamento/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<BarberShop.Domain.Entities.Pagamento>
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "Pagamentos - Barber Shop";
+
 }
 
 <div id="pagamentoPage" class="container-fluid mt-5">
