--- a/BarberShop/Views/Usuario/Index.cshtml
+++ b/BarberShop/Views/Usuario/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<BarberShop.Domain.Entities.Usuario>
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewData["Title"] = "Usuários - Barber Shop";
 }
 
 <div id="usuarioPage" class="container-fluid">
