--- a/BarberShop/Views/Cliente/MeusDadosCliente.cshtml
+++ b/BarberShop/Views/Cliente/MeusDadosCliente.cshtml
@@ -1,9 +1,4 @@
-﻿@model BarberShop.Application.DTOs.ClienteDTO
-
-@{
-    ViewData["Title"] = "Meus Dados";
-}
-
+﻿<div id="meusDadosPageContainer" class="pagina-meus-dados">
     <div id="meusdadosClientePage" class="container my-5 p-4 cliente-dados-container">
         <div class="text-center mb-4">
             <h2 class="text-danger">Meus Dados</h2>
